--- a/style.css
+++ b/style.css
@@ -37,3 +37,39 @@
 .blur-bg {
 	backdrop-filter: blur(5px);
 }
+
+/* Musik Player */
+#music-player {
+	position: fixed;
+	width: 110px;
+	height: 70px;
+	z-index: 9999;
+	cursor: grab;
+	border-radius: 10px;
+	overflow: hidden;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.corner {
+	transition: all 0.3s ease;
+}
+
+.top-left {
+	top: 10px;
+	left: 10px;
+}
+.top-right {
+	top: 10px;
+	right: 10px;
+}
+.bottom-left {
+	bottom: 10px;
+	left: 10px;
+}
+.bottom-right {
+	bottom: 10px;
+	right: 10px;
+}
