--- a/style.css
+++ b/style.css
@@ -73,3 +73,34 @@
 	bottom: 10px;
 	right: 10px;
 }
+
+/* Gaya untuk loading screen */
+#loading-screen {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+	z-index: 9999;
+}
+
+.logo {
+	width: 70px;
+	height: 70px;
+	/* border: 2px solid black; */
+	border-radius: 50%;
+	text-align: center;
+	line-height: 60px;
+	opacity: 0;
+	transition: opacity 0.5s ease;
+}
+
+/* Tambahkan kelas ini saat animasi dimulai */
+.logo.fade-in {
+	opacity: 1;
+}
